--- a/thai_recipe_app/src/App.css
+++ b/thai_recipe_app/src/App.css
@@ -40,8 +40,22 @@ font-size: 20px;
 
 /* Styles start for main navigation */
 
+#navLinks a {
+   font-size: 20px;
+   color: black;
+}
+
+#navLinks a:hover{
+  font-size: 25px;
+  color: #e96d20;
+}
+
+#searchIconBtn:hover{
+  cursor: pointer;
+  color: #e96d20;
+}
+
 #navLinks{
-  font-size: 20px;
   display: flex;
    align-items: "center";
   padding: "5px";
@@ -50,4 +64,20 @@ font-size: 20px;
 
 #navBarContanier{
  margin-top: 30px;
+  
+}
+
+
+#menuIcon{
+font-size: 35px;
+cursor: pointer;
+display: none;
+}
+
+
+@media (max-width: 1123px) {
+  #navBarContanier{
+    margin-right: 35px;
+   }
+  
 }
